--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -19,7 +19,7 @@
   <%- include('navbar') %>
   <div style="background-color: rgb(219, 218, 218); height: 100vh;">
     <div class="container py-5 h-100" >
-      <p class="label-profile">Password</p>
+      <p class="label-profile"><b>Password</b></p>
 
       <div class="row" style="justify-content:center ;">
             
