--- a/views/forgetchangepassword.ejs
+++ b/views/forgetchangepassword.ejs
@@ -19,7 +19,7 @@
     <% if(user) { %>
         <div style="background-color: rgb(219, 218, 218); height: 100vh;">
             <div class="container py-5 h-100" >
-              <p class="label-profile">Password</p>
+              <p class="label-profile"><b>Password</b></p>
 
 
 
@@ -103,7 +103,7 @@
 
             <div style="background-color: rgb(219, 218, 218); height: 100vh;">
                 <div class="container py-5 h-100" >
-                  <p class="label-profile">Password</p>
+                  <p class="label-profile"><b>Password</b></p>
     
     
     
@@ -166,7 +166,7 @@
             <% }else { %>
                 <div style="background-color: rgb(219, 218, 218); height: 100vh;">
                     <div class="container py-5 h-100" >
-                      <p class="label-profile">Password</p>
+                      <p class="label-profile"><b>Password</b></p>
         
         
         
