--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
 
                           <% } else if(company && company.status==="active" ) { %>
                             
-                            <div class="container-sm-width bg-dark ">
+                            <div class="container-sm-width  ">
                                     <% if(jobindex.length> 0) { %>
                                       <% jobindex.forEach((jobindex)=> {%>
                                         <% if( jobindex !=undefined) { %>
