--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -53,7 +53,7 @@ text-align-last: center;
       <%- include('navbar') %>
       <section style="background-color: #eeeeee; height: 100vh; ">
       <div class="container py-5 h-100">
-        <p class="label-profile">MyJob</p>
+        <p class="label-profile"><b>MyJob</b></p>
       <div class="container">
         <div class="row">
       <% if(job.length > 0) { %>
