--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -22,7 +22,7 @@
   <%- include('navbar') %>
   <section style="background-color: #eeeeee; ">
   <div class="container py-5 h-100">
-    <p class="label-profile">Addjob</p>
+    <p class="label-profile"><b>Add Job</b></p>
   </div>
 
    <form action="/company/addjob_company/<%= company.id_company %>" method="post">
