--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -35,7 +35,7 @@ text-align-last: center;
   <% if(user) { %>
     <div style="background-color: rgb(219, 218, 218); height: 100vh;">
     <div class="container py-5 h-100" >
-      <p class="label-profile">Password</p>
+      <p class="label-profile"><b>Password</b></p>
     
           <div class="row" style="justify-content:center ;">
             
@@ -75,7 +75,7 @@ text-align-last: center;
         <% } else if (company) { %>
           <div style="background-color: rgb(219, 218, 218); height: 100vh;">
             <div class="container py-5 h-100" >
-              <p class="label-profile">Password</p>
+              <p class="label-profile"><b>Password</b></p>
 
                 <div class="row" style="justify-content:center ;">
                   
