--- a/views/updatejob.ejs
+++ b/views/updatejob.ejs
@@ -25,7 +25,7 @@
 
   <section style="background-color: #eeeeee; ">
     <div class="container py-5 h-100">
-      <p class="label-profile">Addjob</p>
+      <p class="label-profile"><b>Edit Job</b></p>
     </div>
 
     
