--- a/views/webpage.ejs
+++ b/views/webpage.ejs
@@ -66,7 +66,7 @@ text-align-last: center;
   <section style="background-color: #eeeeee; ">
     
     <div class="container py-5 h-100">
-      <p class="label-profile">Webpage</p>
+      <p class="label-profile"><b>Webpage</b></p>
     </div>
     <form action="/admin/editwebpage/<%= eweb.id_webpage %>" method="post">
     <div class="row" style="justify-content:center; height: 100vh;">
