--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -132,7 +132,7 @@ text-align-last: center;
   </section>
 </form> -->
 
-<section style="background-color: #eeeeee; height: 100vh;">
+<section style="background-color: #eeeeee; height: 100%;">
 <form   action="/user/updateprofile/<%= user.id_user %>" method="post" enctype="multipart/form-data">
 
     <div class="container py-5 h-100">
