--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -21,7 +21,7 @@
 <body>
   <%- include('navbar') %>
   <section style="background-color: #eeeeee; ">
-  <div class="container py-5 h-100">
+  <div class="container py-5  d-flex align-items-center justify-content-center text-center">
     <p class="label-profile"><b>Add Job</b></p>
   </div>
 
@@ -30,7 +30,7 @@
 
 
         <div class="col-lg-6">
-          <div class="card p-5">
+          <div class="card p-5 bg-light">
             <div class="card">
               <div class="card-body">
                 <div class="row">
