--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -38,7 +38,7 @@
 <body>
   <!-- คิดว่าหน้านี้จะใช้สำหรับโชว์รายละเอียดและใส่เงื่อนไขเข้าไปเพื่ออัพเดต -->
   <%- include('navbar') %>
-  
+
   <% if(locals.errors){ %>
     <% Object.values(errors).forEach(function(error){%>
       <script type="text/javascript">
@@ -96,6 +96,39 @@
                   <button type="submit" class="btn btn-success fixed-button" style=" width: 100%;"
                     data-mdb-ripple-color="dark"><b>SAVE</b></button>
                 </form>
+                <script>
+                  document.querySelector('.fixed-button').addEventListener('click', function (event) {
+                    event.preventDefault(); // Prevent the default form submission behavior
+                    fetch('/user/apply/<%= user.id_user %>/<%= job.idjob_company %>', {
+                      method: 'POST',
+                      // Add the data you want to send here
+                      body: JSON.stringify({}),
+                      headers: {
+                        'Content-Type': 'application/json',
+                      },
+                    })
+                      .then(response => response.json())
+                      .then(data => {
+                        if (data.status === "error") {
+                          Swal.fire({
+                            title: "Error",
+                            text: data.error,
+                            icon: "error",
+                          });
+                        } else {
+                            Swal.fire({
+                            title: "Apply for work",
+                            text: data.status,
+                            icon: "success",
+                          });
+                        }
+                      })
+                      .catch(error => {
+                        console.error("An error occurred:", error);
+                      });
+                  });
+                </script>
+
                       <% } else if(company || admin) { %>
                       <% } else { %>
                           <button onclick="lessondelete()" type="button" class="btn btn-success fixed-button" style=" width: 100%;">
