--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -329,7 +329,7 @@
     <ul>
       <li><a class="active" href="/">Home</a></li>
       <li><a href="/user/addresume/<%= user.id_user %>">RESUME</a></li>
-      
+      <li><a href="/user/jobsended/<%= user.id_user %>">JOB SENDED</a></li>
 
     </ul>
     <i class="bi bi-list mobile-nav-toggle"></i>
