--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <style>
   .content-with-space {
@@ -128,7 +129,7 @@
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #222222;
+  color: #222222 !important;
 }
 
 .navbar .dropdown ul {
@@ -308,12 +309,25 @@
   display: block;
 }
 
+a{
+  text-decoration: none;
+}
 </style>
 
-
+  <script>
+    $(document).ready(function () {
+      var path = window.location.pathname; // Get the current URL path
+      $('#navbar ul li a').each(function () {
+        var href = $(this).attr('href');
+        if (path === href) {
+          $(this).addClass('active');
+        }
+      });
+    });
+  </script>
 <% if (status==="loggedIn" ) { %>
   <% if (user && user.status === "active") { %>
-    <div class="container-fluid d-flex justify-content-between align-items-center">
+    <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
     
       <a class="navbar-brand" href="/">
        
@@ -327,13 +341,12 @@
 
   <nav id="navbar" class="navbar order-last order-lg-0">
     <ul>
-      <li><a class="active" href="/">Home</a></li>
+      <li><a href="/">HOME</a></li>
       <li><a href="/user/addresume/<%= user.id_user %>">RESUME</a></li>
       <li><a href="/user/jobsended/<%= user.id_user %>">JOB SENDED</a></li>
-
     </ul>
     <i class="bi bi-list mobile-nav-toggle"></i>
-  </nav><!-- .navbar -->
+  </nav>
 
   <div class="header-social-links">
     <img src="/image/<%= user.image %>" alt="Profile" class="rounded-circle">
@@ -352,7 +365,7 @@
 
 <% } else if(user && user.status === "banned"){ %>
   
-<div class="container-fluid d-flex justify-content-between align-items-center">
+<div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699; height: 50px;">
         
   <a class="navbar-brand" href="/">
    
@@ -389,7 +402,7 @@
 
 <% } else if(company &&company.status ==="active"){ %>
 
-  <div class="container-fluid d-flex justify-content-between align-items-center">
+  <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
     
       <a class="navbar-brand" href="/">
        
@@ -428,7 +441,7 @@
       </div>
     </div>
     <% } else if(company &&company.status ==="banned"){ %>
-      <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
         
         <a class="navbar-brand" href="/">
          
@@ -463,7 +476,7 @@
       </div>
     <% } else if(admin){ %>
 
-      <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
         
           <a class="navbar-brand" href="/">
            
@@ -506,7 +519,7 @@
 
       <% } %>
       <% } else { %>
-<div class="container-fluid d-flex justify-content-between align-items-center">
+<div class="container-fluid d-flex justify-content-between align-items-center" style="  border-bottom: 5px solid #336699;">
         
           <a class="navbar-brand" href="/">
            
