front user com pdf

--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -33,7 +33,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" name="otp" id="otp"  placeholder="otp"/>
+                            <input type="text" name="otp" id="otp"  placeholder="otp"required/>
                         </div>
                       </div>
                       <hr>
@@ -42,7 +42,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="password" name="password" id="password"  placeholder="New Password"/>
+                            <input type="password" name="password" id="password"  placeholder="New Password"required/>
                         </div>
                       </div>
                       <hr>
@@ -51,7 +51,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
+                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"required/>
                         </div>
                       </div>
                       <hr>
@@ -96,7 +96,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" name="otp" id="otp"  placeholder="otp"/>
+                            <input type="text" name="otp" id="otp"  placeholder="otp"required/>
                         </div>
                       </div>
                       <hr>
@@ -105,7 +105,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="password" name="password" id="password"  placeholder="New Password"/>
+                            <input type="password" name="password" id="password"  placeholder="New Password"required/>
                         </div>
                       </div>
                       <hr>
@@ -114,7 +114,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
+                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"required/>
                         </div>
                       </div>
                       <hr>
