--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -11,6 +11,8 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
+
   <style>.form-control-input {
  
     padding: 2px; /* Add some padding */
@@ -32,6 +34,24 @@ text-align-last: center;
 
 <body>
   <%- include('navbar') %>
+  <% if(locals.errors){ %>
+    <% Object.values(errors).forEach(function(error){%>
+      <script type="text/javascript">
+        Swal.fire({
+          title: "<%= error.msg || errors  %>",
+          icon: 'warning',
+        })
+      </script>
+      <%})%>
+        <%} else if (locals.success) { %>
+          <script type="text/javascript">
+            Swal.fire({
+              title: "<%= success  %>",
+              icon: 'success',
+            })
+          </script>
+          <%}%>
+
   <% if(user) { %>
     <div style="background-color: rgb(219, 218, 218); height: 100vh;">
     <div class="container py-5 h-100" >
@@ -49,7 +69,7 @@ text-align-last: center;
                       <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Email</p>
                     </div>
                     <div class="col-sm-9">
-                      <input type="email" id="email" name="email" class="form-control-input" placeholder="Enter Email"/>
+                      <input type="email" id="email" name="email" class="form-control-input" placeholder="Enter Email"required/>
                     </div>
                   </div>
                   <hr>
@@ -89,7 +109,7 @@ text-align-last: center;
                             <p class="mb-0"  style="margin-left: 4vh; margin-top: 1vh;">Email</p>
                           </div>
                           <div class="col-sm-9">
-                            <input type="email" id="email" name="email" placeholder="Enter Email"/>
+                            <input type="email" id="email" name="email" placeholder="Enter Email"required/>
                           </div>
                         </div>
                         <hr>
