--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
     <style>.label-profile{
       width: 117px;
       padding-top: 7px;
@@ -20,6 +21,26 @@
 </head>
 <body>
   <%- include('navbar') %>
+
+
+  <% if(locals.errors){ %>
+    <% Object.values(errors).forEach(function(error){%>
+      <script type="text/javascript">
+        Swal.fire({
+          title: "<%= error.msg || errors  %>",
+          icon: 'warning',
+        })
+      </script>
+      <%})%>
+        <%} else if (locals.success) { %>
+          <script type="text/javascript">
+            Swal.fire({
+              title: "<%= success  %>",
+              icon: 'success',
+            })
+          </script>
+          <%}%>
+
   <section style="background-color: #eeeeee; ">
   <div class="container py-5  d-flex align-items-center justify-content-center text-center">
     <p class="label-profile"><b>Add Job</b></p>
