--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,22 +18,6 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
 <body>
   <%- include('navbar') %>
-  <% if(locals.errors){ %>
-    <script type="text/javascript">
-      Swal.fire({
-        title: "<%= errors %>",
-        icon: 'warning',
-      })
-    </script>
- <%}%>
-  <% if(locals.success){ %>
-    <script type="text/javascript">
-      Swal.fire({
-        title: "<%= success %>",
-        icon: 'success',
-      })
-    </script>
-    <%}%>
     <section class="sectionforlogin">
       <div class="form-box">
         <div class="form-value">
@@ -65,6 +49,36 @@
         </div>
       </div>
     </section>
+
+    <!-- <script>
+      document.querySelector('.fixed-button').addEventListener('click', function (event) {
+        event.preventDefault(); // Prevent the default form submission behavior
+        fetch('/api/login', {
+          method: 'POST',
+          // Add the data you want to send here
+          body: JSON.stringify({}),
+          headers: {
+            'Content-Type': 'application/json',
+          },
+        })
+          .then(response => response.json())
+          .then(data => {
+            if (data.status === "error") {
+              Swal.fire({
+                title: "Error",
+                text: data.error,
+                icon: "error",
+              });
+            } else{
+             
+            }
+          })
+          
+      });
+    </script> -->
+
+
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
 
     <!-- <script>
