--- a/views/pdfemail.ejs
+++ b/views/pdfemail.ejs
@@ -15,15 +15,15 @@
 <div class="container">
   <div class="header">
     <div class="full-name">
-      <span class="first-name">John</span> 
+      <span class="first-name"><%= content[0].username %> </span> 
       <span class="last-name">Doe</span>
     </div>
     <div class="contact-info">
       <span class="email">Email: </span>
-      <span class="email-val">john.doe@gmail.com</span>
+      <span class="email-val"><%= content[0].email %> </span>
       <span class="separator"></span>
       <span class="phone">Phone: </span>
-      <span class="phone-val">111-222-3333</span>
+      <span class="phone-val"><%= content[0].contact %> </span>
     </div>
     
     <div class="about">
